objects/JunoDoc__Junodoc_Details__c/JunoDoc__Junodoc_Details__c.object-meta.xml
<CustomObject>
    <label>Junodoc Details</label>
    <nameField>
        <label>Junodoc Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junodoc Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>