objects/JunoDoc__Junodoc_Details__c/fields/JunoDoc__From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__From_Email_Address__c</fullName>
    <label>From Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>