objects/JunoDoc__Junodoc_Details__c/fields/JunoDoc__Junodoc_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Junodoc_Email_Templates__c</fullName>
    <label>Junodoc Email Templates:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>